--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,34 +1,45 @@
-
-
 .movie-list {
     text-align: center;
 }
+
 .movie-list h1 {
     font-size: 30px;
-    margin: 20px 0;
-}   
+    padding: 20px 0px;
+    margin: 0px;
+}
+
 .movieMiddle {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
+
 .movieCard {
     margin: 10px;
     padding: 10px;
-    border: 1px solid #ccc;
-    width: 250px;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 1px 1px 5px 0px #ccc;
+    width: 100%;
+    max-width: 250px;
     text-align: center;
 }
-.movieCard img {
+
+.movieImg {
     width: 100%;
     height: 300px;
+    border-radius: 5px 5px 0px 0px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
-.movieCard h3 {
+
+.movieTitle {
     font-size: 20px;
     margin: 10px 0;
+    font-weight: bold;
 }
-.movieCard p {
-    font-size: 16px;
+
+
+.movieRate {
+    font-size: 14px;
     margin: 10px 0;
 }
