--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,24 +11,29 @@
 .movieMiddle {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     flex-wrap: wrap;
 }
 
 .movieCard {
     margin: 10px;
     padding: 10px;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
     box-shadow: 1px 1px 5px 0px #ccc;
     width: 100%;
     max-width: 250px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 400px;
 }
 
 .movieCard:hover {
     transform: scale(1.05);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
 }
 
 .movieImg {
@@ -42,13 +47,18 @@
     font-size: 20px;
     margin: 10px 0;
     font-weight: bold;
+    height: 60px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
-
 .movieRate {
-    font-size: 14px;
+    font-size: 20px;
     margin: 10px 0;
-    color: gray; /* 평점 텍스트에 중립적인 색상 */
+    color: gray;
 }
 
 @media (max-width: 768px) {
@@ -68,3 +78,6 @@
         font-size: 12px;
     }
 }
+
+
+
