--- a/CSS/main.css
+++ b/CSS/main.css
@@ -27,6 +27,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 400px;
+    overflow: hidden;
 }
 
 .movieCard:hover {
@@ -39,7 +40,7 @@
 .movieImg {
     width: 100%;
     height: 300px;
-    border-radius: 5px 5px 0px 0px;
+    border-radius: 5px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
 }
 
