--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -11,7 +11,7 @@
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-.modal-content {
+.modalContent {
     background-color: #fefefe;
     margin: 15% auto;
     padding: 20px;
