--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,6 +4,10 @@
 
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #1c1c1c;
+    color: #ffffff;
 }
 
 h1 {
