--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,16 +1,30 @@
 .movieList {
     text-align: center;
+    padding: auto;
 }
 
 .movieList h1 {
-    font-size: 30px;
-    padding: 20px 0px;
+    font-size: 32px;
+    padding: 25px 0px;
     margin: 0px;
 }
 
 #noResultsMessage {
     display: none;
     color: red;
+    font-weight: bold;
+    margin-top: 20px;
+    animation: opacity 0.5s ease-in-out;
+}
+
+@keyframes opacity {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .movieMiddle {
@@ -18,40 +32,60 @@
     justify-content: center;
     align-items: stretch;
     flex-wrap: wrap;
+    gap: 10px;
+    padding: 10px;
+    
 }
 
 .movieCard {
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 1px 1px 5px 0px #ccc;
+    position: relative;
+    color: #ffffff;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 2px 4px 12px rgba(0, 0, 0, 0.2);
     width: 100%;
-    max-width: 250px;
+    max-width: 280px;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 400px;
+    height: 420px;
     overflow: hidden;
+    background-color: #444444;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+    animation: fadeIn 0.5s ease;
 }
 
 .movieCard:hover {
-    transform: scale(1.05);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transform: scale(1.08);
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.3);
+    background-color: #555555;
     cursor: pointer;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .movieImg {
     width: 100%;
-    height: 300px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    height: 320px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .movieTitle {
     font-size: 20px;
-    margin: 10px 0;
+    margin: 12px 0;
     font-weight: bold;
     height: 60px;
     overflow: hidden;
@@ -59,10 +93,12 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    color: #ffcc29;;
 }
 
 .movieRate {
-    font-size: 20px;
-    margin: 10px 0;
-    color: gray;
+    font-size: 18px;
+    margin: 8px 0;
+    color: #cccccc;
+    font-weight: bold;
 }
