--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -1,34 +1,84 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
+    z-index: 3;
     width: 100%;
     height: 100%;
+    left: 0;
+    top: 0;
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modalContent {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
+    background-color: #333333;
+    margin: 5% auto;
+    padding: 5px 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 50%;
 }
 
 .close {
-    color: #aaa;
+    position: relative;
+    bottom: 5px;
+    color: #aaaaaa;
     float: right;
-    font-size: 28px;
+    font-size: 60px;
     font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
+    color: #ffffff;
     text-decoration: none;
     cursor: pointer;
+}
+
+#modalAdd {
+    text-align: center;
+}
+
+.modalImage {
+    position: relative;
+    width: 80%;
+    left: 10px;
+    margin-top: 20px;
+}
+
+.modalUl {
+    display: grid;
+    justify-items: start;
+    margin: 10px;
+}
+
+.modalLi {
+    margin: 10px;
+    text-align: left;
+}
+
+.modalName h1,
+.modalDate h4,
+.modalRate h4 {
+    margin: 0;
+}
+
+.bookAdd {
+    width: 100%;
+    text-align: center;
+    padding: 15px 25px;
+    margin: 20px 0;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 18px;
+    color: #ffffff;
+    background-image: linear-gradient(45deg, #6a11cb, #2575fc); /* 퍼플-블루 그라데이션 */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s ease, box-shadow 0.3s ease;
+}
+
+.bookAdd:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
 }
