--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -1,13 +1,12 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 3;
+    z-index: 1000;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -26,6 +25,7 @@
     float: right;
     font-size: 60px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .close:hover,
