--- a/CSS/main.css
+++ b/CSS/main.css
@@ -9,14 +9,6 @@
     margin: 0px;
 }
 
-#noResultsMessage {
-    display: none;
-    color: red;
-    font-weight: bold;
-    margin-top: 20px;
-    animation: opacity 0.5s ease-in-out;
-}
-
 @keyframes opacity {
     0% {
         opacity: 0;
@@ -76,18 +68,6 @@
     }
 }
 
-.rankBadge {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    background-color: gold;
-    color: black;
-    border-radius: 50%;
-    padding: 5px 10px;
-    font-weight: bold;
-    font-size: 14px;
-}
-
 .movieImg {
     width: 100%;
     height: 320px;
@@ -114,4 +94,20 @@
     margin: 8px 0;
     color: #cccccc;
     font-weight: bold;
+}
+
+#movieBookmark {
+    display: none;
+}
+
+#movieSearch {
+    display: none;
+}
+
+#noResultsMessage {
+    display: none;
+    color: red;
+    font-weight: bold;
+    margin-top: 20px;
+    animation: opacity 0.5s ease-in-out;
 }
